# qt_project1

./: CMakeLists.txt  FinestraPrincipale.cpp  FinestraPrincipale.h  MyBtn.cpp  MyBtn.h  MyThread.h  Worker.cpp  Worker.h  main.cpp
.cache/clangd/index/: main.cpp.757F49B29E9DD0D4.idx
